--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "dependencies": {
     "@lexical/react": "^0.33.1",
     "@lexical/rich-text": "^0.33.1",
-    "@prisma/client": "^6.10.1",
+    "@prisma/client": "^6.12.0",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
-    "jose": "^6.0.11",
+    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.3.4",
+    "next": "^15.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
@@ -28,14 +28,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20",
+    "@types/node": "^24.0.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "^15.4.1",
     "postcss": "^8.5.6",
-    "prisma": "^6.10.1",
+    "prisma": "^6.12.0",
     "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
